# phages-services

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  start_services.sh
bacphlip-service/: Dockerfile  config.yaml  config_model.py  main.py  pyproject.toml  service.py  settings.py
bacphlip-service/data/: t4_phage.fasta.bacphlip
bacphlip-service/tests/: test_service.py
contracts/: pyproject.toml
contracts/src/phages_contracts/: __init__.py  bacphlip.py  deeppl.py  health.py  hmm.py  megadna.py  phabox.py
deeppl-service/: Dockerfile  config.yaml  pyproject.toml  service.py  settings.py
deeppl-service/tests/: test_service.py
evo2-service/: Dockerfile  compute_evo2_embeddings.sh  config.yaml  evo2_compute.sh  evo2_example.py  evo2_slurm.sh  pyproject.toml  run.sh  service.py  test_long_sequence.py
evo2-service/tests/: test_service.py
hmm-service/: .env.example  Dockerfile  README.md  pyproject.toml
hmm-service/src/hmm_service/: __init__.py  config.py  hmm_matcher.py  main.py  models.py
hmm-service/tests/: test_service.py
megadna-service/: .gitignore  Dockerfile  README.md  config.yaml  main.py  megaDNA_embeddings_umap.py  megaDNA_mutagenesis.ipynb  megaDNA_mutagenesis.py  pyproject.toml  service.py  settings.py
megadna-service/tests/: test_mutagenesis.py  test_service.py
phabox-service/: Dockerfile  config.yaml  download_db.sh  environment.yaml  pyproject.toml  service.py  settings.py
phabox-service/tests/: test_service.py
