[project]
name = "phages-contracts"
version = "0.1.0"
description = "Shared Pydantic request/response models for phage services"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phages_contracts"]
