[project]
name = "deeppl-service"
version = "0.1.0"
description = "DeepPL phage lifestyle prediction service using fine-tuned DNABERT"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.30",
    "torch>=2.0",
    "numpy>=1.24",
    "fastapi>=0.100",
    "uvicorn>=0.22",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "pydantic>=2.0",
]

[dependency-groups]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "httpx>=0.24"]
