[project]
name = "hmm-service"
version = "0.1.0"
description = "Local HMM Profile Matching Service using PyHMMER and PHROGs database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyhmmer>=0.11.4",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
]

[project.scripts]
hmm-service = "hmm_service.main:run"

[tool.uv]
package = true

[tool.uv.sources]
